[package]
name = "migration-analyzer"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }

sqlParser = "0.52"


serde = { version = "1.0", features = ["derive"] }
serder_json = "1.0"


walkdir = "2.5"

colored = "2.1"


anyhow = "1.0"
thiserror = "1.0"


chrono = "0.4"


regex = "1.10"

tokio ={ version = "1.40", features = ["full"]}


sqlx ={ version = "0.8", features = ["postgres", "runtime-tokio-native-tls"]}